# spike

./: .bzrignore  .gitignore  COPYING  LICENSE  MANIFEST.in  Makefile  Makefile.am  README.md  TODO  array.c  array.h  behavior.c  behavior.h  bool.c  bool.h  bool.spk  boot.c  boot.h  cgen.c  cgen.h  char.c  char.h  class.c  class.h  compiler.c  compiler.h  configure.ac  cspk.c  cxxgen.c  cxxgen.h  dict.c  dict.h  disasm.c  disasm.h  expressions.spk  ext.c  float.c  float.h  foo.yip  gram.y  (+65 more)
examples/: 8queen.spk  accgen.spk  blocks.out  blocks.spk  circle.in  circle.out  circle.spk  fib.spk  fibgen.spk  fma.out  fma.spk  foreach.spk  functor.out  functor.spk  hello.out  hello.spk  nlines.in  nlines.out  nlines.spk  point.out  point.spk  primes.spk
examples/lst/: 8queen.out  8queen.spk  blocks.out  blocks.spk  cond.spk  super.out  super.spk  temp.spk
include/: om.h
rtl/: Array.s  BlockContext.s  CFunction.s  CObject.s  CThunk.s  Char.s  Context.c  Float.c  Float.s  Function.s  Integer.s  Object.s  String.c  String.s  XFunction.s  blocks.s  epilogue.s  error.s  lookup.c  main.s  prologue.s  rot.s  rtl.h  rtl.spk  send.s  singletons.s  stacktrace.c  test.s  trap.c
spike/: assembler.py  il.py
spike/backends/: CodeGenerator.py
spike/backends/x86_32/: CodeGenerator.py  __init__.py
spike/compiler/: Node.py  NodeFactory.py  Notifier.py  __init__.py  cgen.py  expressions.py  literals.py  naming.py  operators.py  scheck.py  statements.py  symbols.py  tokens.py
spike/ext/: __init__.py
spike/rtl/: Array.s  CObject.s  Float.s  Function.s  Integer.s  String.c  String.s  Symbol.c  error.s  rtl.spk  stacktrace.c  test.s  trap.c
spike/tools/: Assembler.py  Compiler.py  Tool.py  __init__.py
tests/: attr.out  attr.spk  bad-imports.err  bad-imports.spk  bc-in-blocks.spk  blocks.spk  cycle.err  cycle.spk  default-args.out  default-args.spk  dnu.out  dnu.spk  dot-star.out  dot-star.spk  empty.spk  fe.out  fe.spk  gen.out  gen.spk  gremlin.out  gremlin.spk  index.out  index.spk  iter-musings.out  iter-musings.spk  kw-permutations.spk  leaf.out  leaf.spk  my-array.out  my-array.spk  no-main.spk  old.out  old.spk  pi.spk  rodata.out  rodata.spk  static-errors.err  static-errors.spk  syntax-error.spk  unary-kw.out  (+3 more)
tests/lst/: blocks.spk  cond.spk  super.spk  temp.spk
